Collection generator cleanup + test